<resources>
    <string name="app_name">HITeen</string>

    <!-- Strings related to login -->
    <string name="prompt_telephone">请输入手机号码</string>
    <string name="prompt_password">请输入密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_up">注册</string>
    <string name="action_forget_password"><u>忘记密码？</u></string>
    <string name="action_manager_login"><u>管理员登录</u></string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_phone">格式不正确</string>
    <string name="error_invalid_password">密码长度不小于8位</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">请填写完整</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!--    fragment和action bar相关-->
    <string name="action_settings">设置</string>
    <string name="advertisement">"What's New"</string>
    <string name="title_search">搜索</string>
    <string name="title_order">我的订单</string>
    <string name="title_main">主页</string>
    <string name="title_user_center">用户中心</string>
    <!--    排行榜相关-->
    <string name="search_tag_filter">筛选标签</string>
    <string name="search_order_filter">排序方式</string>
    <string name="feedback">反馈</string>
    <!--    排行榜相关-->
    <string name="week_btn">周排行榜</string>
    <string name="month_btn">月排行榜</string>
    <string name="ranking_entry">销量排行榜</string>
    <string name="title_ranking_num">排名</string>
    <string name="title_window">食堂档口</string>
    <string name="title_dish">菜品</string>
    <string name="title_sale_num">销量</string>
    <!--    时间选择控件相关-->
    <string name="cancel">取消</string>
    <string name="title">请选择时间</string>
    <string name="confirm">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="select_date">选择日期</string>
    <string name="current_date">当前日期</string>
    <string name="select_time">选择取餐时间</string>
    <string name="current_time">取餐时间</string>
    <!--    食堂信息展示相关-->
    <string name="intro_score">评分: </string>
    <string name="intro_sale">月销售额: </string>
    <string name="intro_address">地址: </string>
    <string name="intro_comment">评价</string>
    <!--    食堂评价相关-->
    <string name="comment_keyword">关键词: </string>
    <string name="submit">提交</string>
    <string name="comment_hint">请输入您的评价</string>
    <string name="anonymous">匿名评论</string>
<!--    最近浏览相关-->
    <string name="recent_visit_title">最近浏览</string>
    <string name="recent_visit_subtitle">最多呈现最近浏览的10道菜品</string>
</resources>
