<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_main">



    <fragment
        android:id="@+id/navigation_search"
        android:name="com.hitsz.eatut.ui.Search_ui.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/navigation_main"
        android:name="com.hitsz.eatut.ui.Main_ui.MainFragment"
        android:label="@string/title_main"
        tools:layout="@layout/fragment_main" />

    <fragment
        android:id="@+id/navigation_order"
        android:name="com.hitsz.eatut.ui.Order_ui.OrderFragment"
        android:label="@string/title_order"
        tools:layout="@layout/fragment_order" />
    <fragment
        android:id="@+id/navigation_user_center"
        android:name="com.hitsz.eatut.ui.UserCenter_ui.UserCenterFragment"
        android:label="@string/title_user_center"
        tools:layout="@layout/fragment_user_center"/>
</navigation>