<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text = "@string/ranking_entry"
            android:gravity="center"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/ranking_background"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E2E2E2"
            android:layout_marginTop="5dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/week_ranking_btn"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center"
                android:padding="0dp"
                android:text="@string/week_btn"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:background="@color/gray_ce"/>
            <Button
                android:id="@+id/month_ranking_btn"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center"
                android:padding="0dp"
                android:text="@string/month_btn"/>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ranking_recycle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:layout_marginTop="10dp"
            android:cacheColorHint="@android:color/transparent"
            android:divider="#f0f0f0"
            android:dividerHeight="10dp"
            android:fadingEdge="none"
            android:listSelector="#00000000" />
    </LinearLayout>
</LinearLayout>