<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="10dp"
        android:paddingBottom="5dp">
        <TextView
            android:id="@+id/canteen_comment_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="梨园三食堂"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/comment_keyword"
                android:textStyle="bold"
                />
            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/canteen_comment_keyword_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textColor="@color/dark_orange"
                android:textStyle="bold"
                />
            <TextView
                android:layout_marginStart="5dp"
                android:id="@+id/canteen_comment_keyword_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textColor="@color/dark_orange"
                android:textStyle="bold"
                />
            <TextView
                android:layout_marginStart="5dp"
                android:id="@+id/canteen_comment_keyword_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textColor="@color/dark_orange"
                android:textStyle="bold"
                />
            <TextView
                android:layout_marginStart="5dp"
                android:id="@+id/canteen_comment_keyword_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textColor="@color/dark_orange"
                android:textStyle="bold"
                />
            <TextView
                android:layout_marginStart="5dp"
                android:id="@+id/canteen_comment_keyword_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textColor="@color/dark_orange"
                android:textStyle="bold"
                />
            </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E2E2E2"
        android:layout_marginTop="5dp"/>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/comment_recycle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:cacheColorHint="@android:color/transparent"
                android:divider="#f0f0f0"
                android:dividerHeight="10dp"
                android:fadingEdge="none"
                android:listSelector="#00000000" />
        </RelativeLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        android:gravity="bottom">
        <EditText
            android:text=""
            android:id="@+id/comment_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/comment_hint"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">
            <RadioButton
                android:id="@+id/anonymous_flag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/anonymous"/>
            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent"/>
            <Button
                android:text="@string/submit"
                android:id="@+id/comment_submit_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="35dp"
                android:background="@drawable/radius_btn_lighttheme"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>